<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Reviewable</string>
    <string name="title_activity_home">Reviewable</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_share">Share</string>
    <string name="action_delete">Delete</string>
    <string name="title_activity_register">Register</string>
    <string name="username">Username</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="register_text">Don\'t have an account?</string>
    <string name="login">Login</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_review">Add review</string>
    <string name="take_photo">Take photo</string>
    <string name="title_activity_review_detail_view">Review</string>
    <string name="title_activity_forgot_password_view">Reset password</string>
    <string name="loading">Loading...</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="title_activity_forgot_password">Reset password</string>
    <string name="forgot_password_button">Reset password</string>
    <string name="email_disclaimer">We won\'t share your e-mail with third parties and we won\'t spam your mailbox. We hate spam as much as you do.</string>
    <string name="title_activity_edit_account">Edit account</string>
    <string name="edit_account">Edit account</string>
    <string name="password_repeat">Confirm password</string>
    <string name="password_update_text">Fill in if you want to change your password. Leave empty if otherwise.</string>
    <string name="old_password">Current password</string>
    <string name="new_password">New password</string>
</resources>
